# cs6210-project3-1

./: .gitignore  CMakeLists.txt  README.md
caching_proxy/: CachingProxyClient.cpp  CachingProxyServer.cpp  CachingProxyTest.cpp  Makefile  caching_proxy.thrift  parse.sh  random_results.txt  rev_size_new_hit.txt  rev_size_new_results.txt  runTestRandom.sh  runTestRevSize.sh  runTestSize.sh  size_results.txt  timer.h
hello_world/: HelloWorldClient.cpp  HelloWorldServer.cpp  Makefile  hello_world.thrift
simple_proxy/: CacheManager.cpp  CacheManager.h  CacheRepPolicy.h  Makefile  SimpleCache.cpp  SimpleCache.h  SimpleProxyClient.cpp  SimpleProxyServer.cpp  WebCache.cpp  WebCache.h  simple_proxy.thrift
tests/: freq_1100.txt  gen_test.py  random_1100.txt  rev_size_1100.txt  similarweb_list.csv  size_1100.txt  top500.csv
web_page_cache/: FifoReplPolicy.cpp  FifoReplPolicy.h  LruReplPolicy.cpp  LruReplPolicy.h  MaxSizeReplPolicy.cpp  MaxSizeReplPolicy.h  RandReplPolicy.cpp  RandReplPolicy.h  WebPageCache.cpp  WebPageCache.h
